@@ -1,5 +1,6 @@
 Changes in Slurm-GCP 4.1.3
 ==========================
+ -- Add preliminary spot instance support eg. preemptible_bursting = "spot".
 
 Changes in Slurm-GCP 4.1.2
 ==========================
